--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,7 +11,7 @@ html, body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #F6F8F9;
   height: 100%;
-  max-width: 100vw;
+  width: 100%;
   display: inline-block;
 }
 
